--- a/array.html
+++ b/array.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
-	<title>javascript</title>
-
+	<title>javascripts/title>
 	<link crossorigin="anonymous" media="all" rel="stylesheet" href="/assets/scss/common.css" />
 	<script type="text/javascript">
 
