--- a/switch.html
+++ b/switch.html
@@ -37,8 +37,37 @@
 						alert('선택을 제대로 해주세요');
 						break;
 				}
-			})			
+			})
 
+			let 조건 = 1;
+
+			// if( 조건 == 1 ){
+			// 	console.log('1');
+
+			// }else if( 조건 == 2){
+			// 	console.log('2');
+
+			// }else if( 조건 == 3 ){
+			// 	console.log('3');
+
+			// }else{
+			// 	console.log('kyeong');
+
+			// 	return false;
+			// }
+
+
+			if( 조건 === 1){
+				console.log('test')
+
+			}else {
+				consoel.log('test222')
+			}
+
+
+			조건 === 1 ? console.log('test'): console.log('te4st22234e234');
+			
+			
 		}
 
 	
