--- a/ifelse.html
+++ b/ifelse.html
@@ -12,23 +12,32 @@
 		window.onload = function(){
 		
 			_f_initIfElse()
-
 		}
-		
+	
 		function _f_initIfElse(){
+			
+			
+			let _inputValue = document.getElementById('input').value
+			let _textWrap = document.getElementById('test')
 
+
+			console.log(_inputValue)
+			
+			if( _inputValue === '방정훈'){
+				_textWrap.innerHTML = '나는 '+ _inputValue +' 입니다'
+				
+
+			}else if( _inputValue === '방현지' ){
+				_textWrap.innerHTML = '나는 '+ _inputValue +' 입니다'
+
+			}else if( _inputValue === ''){
+				_textWrap.innerHTML = '값 넣어라'
+			}
+
+			_textWrap.setAttribute('title', _inputValue)
 		}
-		
-			// let 조건 = 1;
 
-			// if( 조건 === 1){
-			// 	console.log('test')
-
-			// }else {
-			// 	consoel.log('test222')
-			// }
-
-
+			
 			// 조건 === 1 ? console.log('test'): console.log('te4st22234e234');
 			
 			
@@ -38,12 +47,12 @@
 </head>
 <body>
 	
-	<section id="agree" >
+	<section id="main" >
 		
-		
-		
+		<!-- <input id="input" type="text" name="" value="" onchange="_f_initIfElse()" /> -->
 
+
+		<div id="test" name=""></div>
 	</section>
-
 </body>
 </html>
