--- a/ifelse.html
+++ b/ifelse.html
@@ -11,37 +11,42 @@
 		
 		window.onload = function(){
 		
-			_f_initIfElse()
+			//_f_initIfElse()
 
 		}
 		
 		function _f_initIfElse(){
 
+			var _inputValue = document.getElementById('input').value
+			var _textWrap = document.getElementById('test')
+
+
+			console.log(_inputValue);
+
+			if( _inputValue === '방정훈'){
+				_textWrap.innerHTML = '나는 '+_inputValue +' 입니다'
+
+			}else if( _inputValue === '방현지' ){
+				_textWrap.innerHTML = '나는 '+_inputValue +' 입니다'
+
+			}else{
+				_textWrap.innerHTML = '정확한 이름을 입력해주세요'
+			}
+
+
 		}
 		
-			// let 조건 = 1;
-
-			// if( 조건 === 1){
-			// 	console.log('test')
-
-			// }else {
-			// 	consoel.log('test222')
-			// }
-
-
-			// 조건 === 1 ? console.log('test'): console.log('te4st22234e234');
-			
-			
-
 	
 	</script>
 </head>
 <body>
 	
-	<section id="agree" >
+	<section id="main">
+
+		<input id="input" type="text" name="" value="" onchange="_f_initIfElse()">
 		
-		
-		
+
+		<div id="test"></div>
 
 	</section>
 
