--- a/Study9/array.html
+++ b/Study9/array.html
@@ -9,7 +9,7 @@
 
 		// 상품명, 가격
 		// > 내가담은것들
-		// > 내가 담은것들에 대한 ㄱ
+		// > 내가 담은것들에 대한
 
 		window.onload = function(){
 			/**
@@ -34,7 +34,7 @@
 			_htmlWrap.innerHTML = _HTML
 			
 			let input = document.getElementsByTagName('input')
-			
+			 
 			let _arrary = []
 
 			for( i=0; input.length > i; i++){
