--- a/Study9/array.html
+++ b/Study9/array.html
@@ -9,7 +9,7 @@
 
 		// 상품명, 가격
 		// > 내가담은것들
-		// > 내가 담은것들에 대한 테스트 입니다. 1111
+		// > 내가 담은것들에 대한 테스트 입니다.
 
 		window.onload = function(){
 			/**
