--- a/Stydy10/arraystudy.html
+++ b/Stydy10/arraystudy.html
@@ -479,8 +479,8 @@
 			
 			const loginArea = document.getElementById('loginWrap');
 			const cashArea = document.getElementById('pointArea')
-			const userid = document.getElementById('memberId');
-			const userpw = document.getElementById('memberPw');
+			let userid = document.getElementById('memberId');
+			let userpw = document.getElementById('memberPw');
 			const loginBtn = document.getElementById('loginBtn');
 			let _usercash = document.getElementById('price');
 
