--- a/Stydy10/arraystudy.html
+++ b/Stydy10/arraystudy.html
@@ -18,11 +18,11 @@
 		window.onload = function() {
 			
 			// _f_initPriceButton() - 다시 작업 해야됨 
-
-
 			
 			const chklist = document.getElementById('itemListWrap')
 			const cart_view = document.getElementById('cartlistWrap')
+			const loginArea = document.getElementById('loginWrap');
+			const cashArea = document.getElementById('pointArea')
 
 			//제품 배열
 			let martitem = []
@@ -39,7 +39,7 @@
 			// })
 
 
-			_f_login(members)
+			_f_login(members, loginArea, cashArea)
 			_f_initAjaxList(martitem, members)
 
 			
@@ -168,7 +168,7 @@
 						for(let i=0; i < arr.length;  i++ ){
 														
 							_HTML += '<li class="item">';
-								_HTML += '<input class="name" id="martitemlist'+(i+1)+'" type="checkbox" data-price="'+ arr[i].price +'" name="mart" value="'+arr[i].name+'" />';
+								_HTML += '<input class="name" id="martitemlist'+(i+1)+'" type="checkbox" disabled data-price="'+ arr[i].price +'" name="mart" value="'+arr[i].name+'" />';
 								_HTML += '<label for="martitemlist'+(i+1)+'">'+arr[i].name+'</label>';
 								_HTML += "<span>"+ arr[i].price + "원" + "</span>"
 								_HTML += '<input class="counts" id="count'+i+'" placeholder="0" disabled min="0" type="number" name="count">';
@@ -475,10 +475,8 @@
 		}
 
 		//로그인 기능
-		function _f_login(member) {
+		function _f_login(member, loginArea, cashArea) {
 			
-			const loginArea = document.getElementById('loginWrap');
-			const cashArea = document.getElementById('pointArea')
 			let userid = document.getElementById('memberId');
 			let userpw = document.getElementById('memberPw');
 			const loginBtn = document.getElementById('loginBtn');
